fix: scrollbar issue EXLM-3785

--- a/blocks/mini-toc/mini-toc.css
+++ b/blocks/mini-toc/mini-toc.css
@@ -27,7 +27,7 @@
 }
 
 .mini-toc-wrapper .mini-toc .scrollable-div:hover {
-  overflow: hidden scroll;
+  overflow: hidden auto;
 }
 
 .mini-toc-wrapper .mini-toc h2 {
